crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__room_transcript_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 36
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"⏺ reviewer: the plan is thin on tests                                                                                   "
"  none of M9's exit criteria name one                                                                                   "
"                                                                                                                        "
"⏺ scout: M9's exit criteria cover them                                                                                  "
"                                                                                                                        "
"⏺ parent: then let us ship it                                                                                           "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                                                           │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                               in #design"
