crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__room_transcript_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> reviewer: the plan is thin on tests                                           "
"                                                                                "
"> scout: M9's exit criteria cover them                                          "
"                                                                                "
"> then let us ship it                                                           "
"in #design                                                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts · / commands · ! shell                                          "
