crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__roster_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 31
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                    owed                "
"                                                                                                  room     owed         "
"                                                                                                  ─────────────────     "
"                                                                                                  #design  reviewer     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ ✻ Welcome to bingo!                                                                          │                        "
"│                                                                                              │                        "
"│   /help for help · /login codex to use a subscription                                        │                        "
"│   cwd: /tmp/project                                                                          │                        "
"Sessions                                                             Rooms                                              "
"❯ ⏺ project   what is in this workspace?                               #design  2 seats · 1 owed                        "
"  ⏺ reviewer  running · in #design · owes an answer · 22m · 3 tool…                                                     "
"  ~ watcher   idle · in #design · listening · 300s                                                                      "
"  ⏺ scout     done · 0 tools · 0 tokens                                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ > ask anything · / for commands · ! for shell                                                │                        "
"╰──────────────────────────────────────────────────────────────────────────────────────────────╯                        "
"1 running                                                                                                         fake-1"
