crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__roster_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> what is in this workspace?                                                    "
"Agents                                                                          "
"❯ ⏺ project   what is in this workspace?                                        "
"  ~ reviewer  running · in #design · 3 unread · live · owes an answer · 22m · 3…"
"  ⏺ watcher   idle · in #design · listening · 600s                              "
"  ⏺ scout     done · 0 tools · 0 tokens                                         "
"Rooms                                                                           "
"  #design  2 seats · 1 owed                                                     "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                            fake/fake-1"
